modules/deductions-private/sg.tf
resource "aws_security_group" "mq_sg" {
    vpc_id = module.vpc.vpc_id
    name   = "deductor-mq-sg"

    tags = {
        Name = "deductor-mq-b-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group_rule" "local_mq_access" {
    type              = "ingress"
    security_group_id = aws_security_group.mq_sg.id
    description     = "Allow traffic from within the same vpc"
    protocol        = "tcp"
    from_port       = "5671"
    to_port         = "5671"
    cidr_blocks     = [var.cidr]
}

resource "aws_security_group_rule" "ingress_int_alb_to_mq_admin" {
    type                = "ingress"
    security_group_id   = aws_security_group.mq_sg.id
    description         = "Allow traffic from Internal ALB to MQ Admin Console"
    protocol            = "tcp"
    from_port           = "8162"
    to_port             = "8162"
    source_security_group_id    = aws_security_group.private-alb-internal-sg.id
}

 resource "aws_security_group_rule" "vpn_to_mq" {
     type                = "ingress"
     security_group_id   = aws_security_group.mq_sg.id
     description         = "Allow traffic from VPN to MQ"
     protocol            = "tcp"
     from_port           = "61614"
     to_port             = "61614"
     source_security_group_id    = aws_security_group.vpn.id
 }

resource "aws_security_group_rule" "ingress_ecs_tasks" {
  type                = "ingress"
  security_group_id   = aws_security_group.mq_sg.id
  description         = "Access to Deductions Private ECS Tasks"
  protocol            = "tcp"
  from_port           = "61614"
  to_port             = "61614"
  source_security_group_id     = aws_security_group.gp2gp-adaptor-ecs-task-sg.id
}

resource "aws_security_group_rule" "ingress_amqp_ecs_tasks" {
  type                = "ingress"
  security_group_id   = aws_security_group.mq_sg.id
  description         = "Access for Deductions Private ECS Tasks"
  protocol            = "tcp"
  from_port           = "5671"
  to_port             = "5671"
  source_security_group_id     = aws_security_group.gp2gp-adaptor-ecs-task-sg.id
}

resource "aws_security_group_rule" "ingress_mhs" {
  type                = "ingress"
  security_group_id   = aws_security_group.mq_sg.id
  description         = "Access to queues from MHS VPC"
  protocol            = "tcp"
  from_port           = "5671"
  to_port             = "5671"
  cidr_blocks         = [var.mhs_cidr]
}

resource "aws_security_group_rule" "egress_all" {
  type                = "egress"
  security_group_id   = aws_security_group.mq_sg.id
  description         = "Allow All Outbound"
  protocol            = "tcp"
  from_port           = "0"
  to_port             = "0"
  cidr_blocks         = ["0.0.0.0/0"]
}

resource "aws_security_group" "generic-comp-ecs-task-sg" {
    name        = "${var.environment}-generic-comp-ecs-task-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from ALB to Generic Component Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from ALB to to Generic Component Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to Generic Component Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to Generic Component Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    egress {
        description = "Allow All Outbound"
        protocol    = "-1"
        from_port   = 0
        to_port     = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-generic-comp-ecs-task-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "administration-portal-ecs-task-sg" {
    name        = "${var.environment}-administration-portal-ecs-task-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from ALB to Administration Portal Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from ALB to Administration Portal Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to Administration Portal Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to Administration Portal Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    egress {
        description = "Allow All Outbound"
        protocol    = "-1"
        from_port   = 0
        to_port     = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-administration-portal-ecs-task-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "gp2gp-adaptor-ecs-task-sg" {
    name        = "${var.environment}-gp2gp-adaptor-ecs-task-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from ALB to GP2GP Adaptor Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from ALB to to GP2GP Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to GP2GP Adaptor Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to to GP2GP Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    egress {
        description = "Allow All Outbound"
        protocol    = "-1"
        from_port   = 0
        to_port     = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-gp2gp-adaptor-ecs-task-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}


resource "aws_security_group" "deductions-private-alb-sg" {
    name        = "${var.environment}-${var.component_name}-alb-sg"
    description = "controls access to the ALB"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description = "Allow Whitelisted Traffic to access PDS Adaptor ALB"
        protocol    = "tcp"
        from_port   = 80
        to_port     = 80
        cidr_blocks = var.allowed_public_ips
    }

    ingress {
        protocol    = "tcp"
        from_port   = 443
        to_port     = 443
        cidr_blocks = var.allowed_public_ips
    }

    egress {
        description = "Allow All Outbound"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-deductions-private-alb-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "gp-to-repo-ecs-task-sg" {
    name        = "${var.environment}-gp-to-repo-ecs-task-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from ALB to the GP to Repo Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from ALB to the GP to Repo Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to the GP to Repo Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to the GP to Repo Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    egress {
        description = "Allow All Outbound"
        protocol    = "-1"
        from_port   = 0
        to_port     = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-gp-to-repo-ecs-task-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "repo-to-gp-ecs-task-sg" {
    name        = "${var.environment}-repo-to-gp-ecs-task-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from ALB to the Repo to GP Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from ALB to the Repo to GP Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.deductions-private-alb-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to the Repo to GP Task"
        protocol        = "tcp"
        from_port       = "3000"
        to_port         = "3000"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    ingress {
        description     = "Allow traffic from Internal ALB to the Repo to GP Task"
        protocol        = "tcp"
        from_port       = "80"
        to_port         = "80"
        security_groups = [aws_security_group.private-alb-internal-sg.id]
    }

    egress {
        description = "Allow All Outbound"
        protocol    = "-1"
        from_port   = 0
        to_port     = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-repo-to-gp-ecs-task-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "private-alb-internal-sg" {
    name        = "${var.environment}-${var.component_name}-alb-internal-sg"
    description = "Internal ALB for deductions-private VPC"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description = "Allow traffic from deductions-private VPC"
        protocol    = "tcp"
        from_port   = 80
        to_port     = 80
        cidr_blocks = [var.cidr]
    }

    ingress {
        protocol    = "tcp"
        from_port   = 443
        to_port     = 443
        cidr_blocks = [var.cidr]
    }

    egress {
        description = "Allow All Outbound"
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.environment}-deductions-private-alb-internal-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "ecr-endpoint-sg" {
  name        = "${var.environment}-${var.component_name}-ecr-endpoint-sg"
  description = "Taffic for the ECR VPC endpoint."
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"

    # Allow to pull images from the local network
    cidr_blocks = [var.cidr]
  }

  tags = {
    Name            = "${var.environment}-${var.component_name}-ecr-endpoint-sg"
    CreatedBy   = var.repo_name
    Environment = var.environment
  }
}

resource "aws_security_group" "logs-endpoint-sg" {
  name        = "${var.environment}-${var.component_name}-logs-endpoint-sg"
  description = "Traffic for the CloudWatch Logs VPC endpoint."
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"

    security_groups = [
      aws_security_group.gp-to-repo-ecs-task-sg.id,
      aws_security_group.gp2gp-adaptor-ecs-task-sg.id,
      aws_security_group.repo-to-gp-ecs-task-sg.id,
      aws_security_group.administration-portal-ecs-task-sg.id,
      aws_security_group.generic-comp-ecs-task-sg.id,
      aws_security_group.vpn.id
    ]
  }

  tags = {
    Name            = "${var.environment}-${var.component_name}-logs-endpoint-sg"
    CreatedBy   = var.repo_name
    Environment = var.environment
  }
}

resource "aws_security_group" "gp-to-repo-db-sg" {
    name        = "${var.environment}-gp-to-repo-db-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from gp-to-repo to the db"
        protocol        = "tcp"
        from_port       = "5432"
        to_port         = "5432"
        security_groups = [aws_security_group.gp-to-repo-ecs-task-sg.id]
    }

    tags = {
        Name = "${var.environment}-state-db-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}

resource "aws_security_group" "repo-to-gp-db-sg" {
    name        = "${var.environment}-repo-to-gp-db-sg"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description     = "Allow traffic from repo-to-gp to the db"
        protocol        = "tcp"
        from_port       = "5432"
        to_port         = "5432"
        security_groups = [aws_security_group.repo-to-gp-ecs-task-sg.id]
    }

    tags = {
        Name = "${var.environment}-state-db-sg"
        CreatedBy   = var.repo_name
        Environment = var.environment
    }
}
